--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,12 @@
         android:layout_alignParentEnd="true"
         android:layout_marginRight="53dp"
         android:layout_marginEnd="53dp" />
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/niebla"
+        android:id="@+id/niebla" />
+
 </RelativeLayout>
