--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/niebla"
-        android:id="@+id/niebla" />
+        android:id="@+id/niebla"
+        android:adjustViewBounds="false" />
 
 </RelativeLayout>
