--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,21 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.charlie.practicaandroid.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/textView" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/abc_btn_radio_to_on_mtrl_000"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="103dp"
-        android:id="@+id/Point"
-        android:layout_toRightOf="@+id/textView" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,11 +23,26 @@
         android:layout_marginEnd="53dp" />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/abc_btn_radio_to_on_mtrl_000"
+        android:id="@+id/Point"
+        android:layout_above="@+id/Point2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="54dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginBottom="88dp" />
+
+    <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/niebla"
         android:id="@+id/niebla"
-        android:adjustViewBounds="false" />
+        android:adjustViewBounds="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
