--- a/app/src/main/res/layout/activity_star_pattern.xml
+++ b/app/src/main/res/layout/activity_star_pattern.xml
@@ -15,7 +15,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ghost_estrella"
+        android:src="@drawable/ghost_estrella"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
