--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,7 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.charlie.practicaandroid.MainMenu"
-    android:background="@drawable/misty">
+    android:background="@drawable/smoke_misty2"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
