--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -21,17 +21,14 @@
         android:clickable="false"
         android:animateLayoutChanges="false"
         android:gravity="left"
-        tools:ignore="RtlHardcoded"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_height="match_parent"
-            android:gravity="left"
+        <Space
             android:layout_width="wrap_content"
-            android:layout_weight="0.50"></LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -50,15 +47,28 @@
             <Button
                 android:text="@string/start"
                 android:layout_width="match_parent"
-                android:layout_height="122dp"
-                android:id="@+id/start_button"
+                android:layout_height="89dp"
+                android:id="@+id/start_gyro"
                 android:background="@drawable/botonnaranja"
-                android:layout_weight="0.12" />
+                android:layout_weight="0.10" />
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.21" />
+
+            <Button
+                android:text="@string/start2"
+                android:layout_width="match_parent"
+                android:layout_height="88dp"
+                android:id="@+id/start_compass"
+                android:background="@drawable/botonnaranja"
+                android:layout_weight="0.10" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.26" />
 
             <Button
                 android:text="@string/instructions"
@@ -87,13 +97,10 @@
                 android:layout_weight="0.26" />
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.50">
-
-        </LinearLayout>
+        <Space
+            android:layout_height="wrap_content"
+            android:layout_weight="0.2"
+            android:layout_width="wrap_content" />
 
     </LinearLayout>
 
