--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.charlie.practicaandroid.MainActivity">
+    tools:context="com.example.charlie.GhostlyRunes.MainActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -35,12 +35,19 @@
         android:layout_marginBottom="88dp"
         android:contentDescription="Niebla para ser borrada" />
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/niebla"
-        android:id="@+id/niebla"
-        android:adjustViewBounds="false" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/splash2"
+            android:id="@+id/niebla"
+            android:adjustViewBounds="false"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </RelativeLayout>
