Removed Compass from Gyroscope only

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/splash2"
+            android:src="@drawable/greensplash"
             android:id="@+id/niebla"
             android:adjustViewBounds="false"
             android:layout_weight="1" />
