--- a/app/src/main/res/layout/activity_star_pattern.xml
+++ b/app/src/main/res/layout/activity_star_pattern.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ghost_estrella"
-        android:id="@+id/imageView"
+        android:id="@+id/ghostStar"
         android:alpha="1"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
