Now GyroActivity moves a new Activity when Ghost is found

--- a/app/src/main/res/layout/activity_gyro.xml
+++ b/app/src/main/res/layout/activity_gyro.xml
@@ -11,7 +11,7 @@
         android:layout_width="145dp"
         android:layout_height="117dp"
         android:src="@drawable/flechaverde"
-        android:id="@+id/flecha"
+        android:id="@+id/arrow"
         android:layout_gravity="center_horizontal" />
 
     <LinearLayout
