--- a/app/src/main/res/layout/activity_gyro.xml
+++ b/app/src/main/res/layout/activity_gyro.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/blue"
+    android:background="@drawable/blue2"
     android:weightSum="1"
     android:gravity="center_vertical">
 
