--- a/app/src/main/res/layout/activity_semi_circle_pattern.xml
+++ b/app/src/main/res/layout/activity_semi_circle_pattern.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.GhostlyRunes.SemiCirclePatternActivity"
-    android:background="@drawable/blue"   >
+    android:background="@drawable/blue2"   >
 
     <ImageView
         android:layout_width="wrap_content"
