--- a/app/src/main/res/layout/activity_slimer_pattern.xml
+++ b/app/src/main/res/layout/activity_slimer_pattern.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_slimer_pattern"
     android:layout_width="match_parent"
@@ -88,6 +89,15 @@
         android:layout_alignLeft="@+id/Point3"
         android:layout_alignStart="@+id/Point3"
         android:layout_marginTop="12dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splatblood"
+        android:id="@+id/splat"
+
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
 
