--- a/app/src/main/res/layout/activity_zigzag_pattern.xml
+++ b/app/src/main/res/layout/activity_zigzag_pattern.xml
@@ -83,4 +83,13 @@
         android:layout_toRightOf="@+id/Point3"
         android:layout_toEndOf="@+id/Point3" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splatgreen"
+        android:id="@+id/splat"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
