--- a/app/src/main/res/layout/activity_semi_circle_pattern.xml
+++ b/app/src/main/res/layout/activity_semi_circle_pattern.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_semi_circle_pattern"
     android:layout_width="match_parent"
@@ -99,5 +100,16 @@
         android:layout_alignTop="@+id/Point5"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/splatpurple"
+        android:layout_toEndOf="@+id/Point2"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
