--- a/app/src/main/res/layout/activity_star_pattern.xml
+++ b/app/src/main/res/layout/activity_star_pattern.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.GhostlyRunes.StarPatternActivity"
-    android:background="@drawable/blue2"   >
+    android:background="@drawable/blue"   >
 
     <ImageView
         android:layout_width="wrap_content"
