Addindg Toasts and sorting how to randomly show ghosts in Compass.

--- a/app/src/main/res/layout/activity_semi_circle_pattern.xml
+++ b/app/src/main/res/layout/activity_semi_circle_pattern.xml
@@ -105,8 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/splatpurple"
-        android:layout_toEndOf="@+id/Point2"
-        android:id="@+id/imageView"
+        android:id="@+id/splat"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
