--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -25,10 +25,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"></LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -37,7 +38,7 @@
             android:clickable="false"
             android:showDividers="middle"
 
-            >
+            android:gravity="center_horizontal">
 
             <Space
                 android:layout_width="match_parent"
@@ -97,10 +98,36 @@
                 android:layout_weight="0.26" />
         </LinearLayout>
 
-        <Space
-            android:layout_height="wrap_content"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:layout_width="wrap_content" />
+            android:weightSum="1">
+
+            <ImageView
+                android:layout_width="59dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/spain"
+                android:id="@+id/imageView"
+                android:layout_weight="0.45"
+                android:layout_gravity="center_horizontal" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="176dp"
+                android:src="@drawable/british"
+                android:id="@+id/imageView2"
+                android:layout_weight="0.25" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/germany"
+                android:id="@+id/imageView3"
+                android:layout_weight="0.98" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
