--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -29,7 +29,14 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"></LinearLayout>
+            android:layout_weight="0.2">
+
+            <Button
+                android:layout_width="59dp"
+                android:layout_height="58dp"
+                android:id="@+id/vol"
+                android:background="@drawable/vol_off" />
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
