--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,8 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.GhostlyRunes.MainMenu"
-    android:background="@drawable/smoke_misty2"
-    >
+    android:background="@drawable/smoke_misty2">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -110,27 +109,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:gravity="center_horizontal">
 
             <Button
-                android:layout_width="55dp"
-                android:layout_height="57dp"
+                android:layout_width="48dp"
+                android:layout_height="44dp"
                 android:id="@+id/spanish"
                 android:background="@drawable/spain"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.01" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="61dp"
+                android:layout_width="66dp"
+                android:layout_height="49dp"
                 android:id="@+id/english"
                 android:background="@drawable/british" />
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
+                android:layout_width="65dp"
+                android:layout_height="50dp"
                 android:id="@+id/german"
-                android:background="@drawable/germany"
-                android:layout_weight="0.03" />
+                android:background="@drawable/germany" />
 
         </LinearLayout>
 
